# invitta-management

./: .env.example  .env.production  .gitignore  build-hostido.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  render.yaml  ssl-setup.sh
backend/: .env.hostido  Dockerfile  Dockerfile.prod  alembic.ini  app.py  main.py  passenger_wsgi.py  pyproject.toml  requirements.txt  run_migrations.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_update_schema.py  003_add_cost_config.py  004_update_user_model.py  005_order_based_schema.py  006_order_status.py  007_add_cancelled_status.py  008_add_edge_type.py  009_add_cost_config.py  010_add_multi_source_sync.py  011_expand_product_pattern_length.py  012_expand_product_text_lengths.py  013_start_orders_in_progress.py  014_action_shared_workers.py  015_add_s2_s4_edge_types.py  016_add_sync_lock.py  017_add_sync_warning.py
backend/src/: action_workers.py  config.py  cost_calculator.py  main.py  models.py  order_sources.py  order_statuses.py  schemas.py
backend/src/routers/: __init__.py  actions.py  config.py  costs.py  orders.py  production.py  products.py  stats.py  sync.py  users.py
backend/src/services/: baselinker.py  costs.py  invitta.py  order_sync.py  sync.py
frontend/: Dockerfile  Dockerfile.prod  index.html  nginx.conf  nginx.prod.conf  package.json  vite.config.js
frontend/src/: AdminTopBar.tsx  App.tsx  WorkerTopBar.tsx  api.ts  index.css  types.ts
frontend/src/context/: AuthContext.tsx
hostido-deploy/public_html/: index.html
nginx/: nginx.conf
(+22 files in other folders)
