[project]
name = "production-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "apscheduler>=3.10.0",
    "fastapi>=0.115.0",
    "pymysql>=1.1.0",
    "cryptography>=42.0.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.0",
    "a2wsgi>=1.10.0",
]

